web/public/shared.css
* {
  box-sizing: border-box;
}
body {
  font-family: Helvetica, Arial, sans-serif;
  margin: 0;
  line-height: 1.3em;
  word-wrap: break-word;
  font-size: 16px;
  color: #044;
}
a {
  color: #666;
}
button,
a.button,
input[type="submit"] {
  font-size: 14px;
  background: #e7e7e7;
  border: 1px solid #5f5f5f;
  color: #555;
  border-radius: 3px;
  padding: 6px 10px;
  cursor: pointer;
  text-decoration: none;
  display: inline-block;
  height: 33px;
  -webkit-appearance: none;
}
button:hover,
a.button:hover,
input[type="submit"]:hover {
  background: #ccc;
}
button.button-big,
a.button.button-big,
input[type="submit"].button-big {
  padding: 16px 20px;
  font-size: 18px;
  height: auto;
}
button.button-blue,
a.button.button-blue,
input[type="submit"].button-blue {
  background: #7fe7e7;
  color: #044;
}
button.button-blue:hover,
a.button.button-blue:hover,
input[type="submit"].button-blue:hover {
  background: #6bc4c4;
}
button.button-yellow {
  background: #fcd204;
  color: #540;
}
button.button-yellow:hover {
  background: #ddb904;
}
button[disabled],
input[type="submit"][disabled] {
  background: #eee;
  border: 1px solid #999;
  color: #999;
}

input[type="text"],
input[type="email"],
textarea {
  line-height: 32px;
  padding: 0 6px;
  width: 100%;
  font-size: 15px;
  margin-top: 8px;
  border: 1px solid #bbb;
}

.right-items {
  display: flex;
  margin-left: auto;
  align-items: center;
}
.input-search {
  border-radius: 20px;
  padding: 5px 5px 5px 27px;
  border: none;
  width: 150px;
}
.search-icon {
  position: absolute;
  margin-top: 2px;
  margin-left: 7px;
}

.no-link-style {
  text-decoration: none;
  color: inherit;
}

.screen-center {
  margin: 0 auto;
  max-width: 792px;
}

.home-page .screen-center {
  margin: 0 auto;
  max-width: 992px;
}

.white-page {
  background: #fff;
  border-radius: 5px;
  padding: 25px 25px 40px 25px;
}

.columns {
  display: flex;
  align-content: stretch;
}

.reverse-columns {
  display: flex;
  align-content: stretch;
  flex-direction: row-reverse;
}

h1 {
  font-weight: bold;
  line-height: 1.3em;
  margin: 0;
  padding: 0;
}

h2 {
  font-size: 18px;
  margin-top: 0;
  font-weight: normal;
}

.post {
  display: flex;
  padding: 10px 0;
  border-top: 1px solid #ddd;
}

.post-profile-pic {
  width: 48px;
  max-height: 200px;
  border: 1px solid #044;
  min-height: 48px;
}

.post-content {
  padding-left: 10px;
  width: calc(100% - 48px);
}

.wall {
  max-width: 592px;
  padding: 14px;
  flex-grow: 1;
  background: #fff;
  min-height: 300px;
}

.entrance {
  background: #fbb;
}

.entrance header {
  display: none;
}

.column-side-padding {
  padding: 0 14px;
}

.profile-pic {
  width: 128px;
  border: 1px solid #044;
  min-height: 128px;
}

.profile-actions form {
  display: inline-block;
}

.overlay {
  position: fixed;
  z-index: 1;
  background: rgba(0, 0, 0, 0.4);
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.modal {
  position: fixed;
  z-index: 2;
  background: #fff;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  min-width: 400px;
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.8);
}

.modal-header {
  display: flex;
  align-items: center;
  padding: 10px;
  padding-bottom: 0;
  font-weight: bold;
  text-decoration: none;
  color: #000;
}

.modal-body {
  padding: 10px;
  color: #000;
}

.modal-footer {
  padding: 10px;
  background: #fffbf4;
  border-top: 1px solid #ddd;
  font-size: 12px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.modal-footer a {
  color: #fff;
  font-size: 16px;
  text-decoration: none;
  margin-top: 2px;
  padding: 0 8px;
}

.profile-pic-placeholder {
  min-width: 100px;
  width: 100px;
  height: 100px;
  border: 5px solid #fff;
  box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
  background: #ddd;
}

.profile-pic-placeholder img {
  max-width: 100%;
  display: block;
}

.link-block {
  border-radius: 3px;
  display: flex;
  align-items: center;
  margin-bottom: 5px;
  text-decoration: none;
  color: #000;
  padding: 0;
}

.link-block:hover {
  text-decoration: underline;
}

.link-profile-pic {
  width: 32px;
  max-height: 100px;
  margin-right: 5px;
  min-height: 32px;
}

.secret-button {
  width: 100%;
  text-align: left;
  display: flex;
  align-items: center;
  padding: 5px 14px;
  background: none;
  color: #000;
  height: auto;
  border: none;
}

.secret-button:hover {
  text-decoration: none;
  background: #ed6;
}

.secret-button .link-profile-pic {
  width: 48px;
}

.compose-post {
  border-radius: 5px;
  border: 1px solid #aaaaaa;
  resize: none;
  width: 100%;
  padding: 8px;
  height: 50px;
  font-size: 13px;
  line-height: 1.2em;
}

.undo-request:hover:after {
  content: " (undo)";
}

.key-block {
  white-space: pre-wrap;
  background: #f5f5f5;
  border: 1px solid #ccc;
  border-radius: 3px;
  padding: 10px;
}

.community-topic-link {
  justify-content: space-between;
  padding: 8px 0;
  border-top: 1px solid #ccc;
  text-decoration: none;
}

.community-topic-link:hover .community-topic-name {
  text-decoration: underline;
}

.community-topic-name {
  width: calc(100% - 110px);
}

.community-topic-replies {
  width: 110px;
  text-align: right;
}

.index-welcome {
  background: #8debf5;
  padding: 50px;
}

.index-explanation {
  background: #fbb;
  padding: 50px 0;
  color: #600;
}

.index-explanation ul {
  padding-left: 15px;
}

.index-explanation li {
  padding: 6px 0;
}

.index-more-details {
  display: none;
}

@media (max-width: 576px) {
  header {
    /* For responsiveness on login and singup pages, because I was too lazy to do a mobile focused version for those */
    padding: 10px !important;
  }
  .index-welcome {
    height: 98vh;
    padding: 30px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }
  .index-explanation {
    padding: 14px;
  }
  .index-more-details {
    background: none;
    border: none;
    align-content: flex-end;
  }
  .index-more-details {
    display: block;
  }
  .index-explanation {
    height: 100vh;
  }
}

.letter-count {
  text-align: right;
  font-size: 24px;
  color: #ccc;
  font-weight: bold;
}

